2002-05-09  Adam Fedor  <fedor@gnu.org>

	* Headers/gsc/GSGState.h: Add color and text ivars.
	* Headers/winlib/WIN32GState.h: Idem.
	* Headers/xlib/XGGState.h: Idem.

	* Source/gsc/GSContext.m: Implement font/text methods.
	* Source/gsc/GSGState.m (-setColor:state:) Implement
	Implement color DPS and GS ops to use it.
	Implement text/font ops.

	* Source/winlib/WIN32GState.m (-setColor:state:) Implement.
	Remove color ops (now in GSGState)

	* Source/xlib/XGGState.m (-setColor:state:) Implement.
	(-setAlphaColor:) New.
	Remove color ops (now in GSGState)

2002-05-07  Adam Fedor  <fedor@gnu.org>

	* Source/gsc/GSStreamContext.m (-GSSetFont:): Don't flip
	the font for a flipped view.

2002-05-06  Adam Fedor  <fedor@gnu.org>

	* configure.ac (BUILD_SERVER): Set to predefined define
	* Source/GSBackend.m: Use it.

2002-05-05  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Simplify backend selection using --enable-server
	and --enable-graphics. Add --with-library-flags and
	--with-include-flags for adding additonal flags. Revert last
	change to XShm.h test. Add check for art libraries.
	* Source/GNUmakefile: Conform to new configure output
	* Source/GSBackend.m: Idem.
	* Headers/x11/wraster.h: Idem.
	* Source/x11/XIMInputServer.m: Correct define for HAVE_UTF8

	* GNUmakefile.postamble (after-distclean): Remove config.h
	* Source/gsc/GSContext.m (-dealloc): Destroy gstate.
	* Source/x11/XGServerWindow.m([XGServer
	-_addExposedRectangle::]): Use current context class
	([XGServer -flushwindowrect::]): Idem. (patches from 
	alexander@malmberg.org).

2002-05-04  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Improved check for XShm.h
	* Headers/x11/wraster.h: Use HAVE_X11_EXTENSIONS_XSHM_H
	* Source/x11/XIMInputServer.m: Fix #if for USE_XIM (patch from
	alexander@malmberg.org)
	* Source/xlib/XGContext.m: Idem for HAVE_XFT

2002-05-03  Adam Fedor  <fedor@gnu.org>

	* GNUmakefile.postamble: Remove '/' in
	$(INSTALL_ROOT_DIR)/$(GNUSTEP_MAKEFILES) so Windows won't
	complain.
