@@ -1,3 +1,8 @@
+2002-05-11  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/Source/xlib/XGFont.m: ([-xCharStructForGlyph:]) use newer
+	GSGFromUnicode() API.
+
 2002-05-09  Adam Fedor  <fedor@gnu.org>
 
 	* Headers/gsc/GSGState.h: Add color and text ivars.
